@@ -1,0 +1,3 @@
+UPDATE {pre}_options SET options_value = '2011.3_Patch_5_GIT' WHERE options_mod = 'clansphere' AND options_name = 'version_name';
+UPDATE {pre}_options SET options_value = '2013-01-29' WHERE options_mod = 'clansphere' AND options_name = 'version_date';
+UPDATE {pre}_options SET options_value = '87' WHERE options_mod = 'clansphere' AND options_name = 'version_id';
