@@ -1,6 +1,11 @@
 CHANGELOG
 --------------------------
 
+ClanSphere 2011.3 Patch 5 >> 2013-XX-XX
+___________________________________________________________
+
+
+
 ClanSphere 2011.3 Patch 4 >> 2013-01-28
 ___________________________________________________________
 
